--- a/src/main/resources/CodeBash/CodeBash.css
+++ b/src/main/resources/CodeBash/CodeBash.css
@@ -1,4 +1,13 @@
+.root{
+    -fx-background-color: Grey;
+}
 .button {
-    -fx-background-color: transparent;
-    -fx-border-color: transparent;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
 }
