--- a/src/main/resources/CodeBash/WelcomeLight.css
+++ b/src/main/resources/CodeBash/WelcomeLight.css
@@ -7,4 +7,17 @@
 
 }
 
+#start {
+    -fx-background-color: transparent;
+    -fx-text-fill: Orange;
+    -fx-font: Arial;
+    -fx-font-size: 15;
+    -fx-padding: 15;
+    -fx-font-weight: bold;
+}
 
+#playAgain {
+    -fx-background-color: transparent;
+    -fx-text-fill: Orange;
+
+}
