--- a/src/main/resources/CodeBash/CodeBashDark.css
+++ b/src/main/resources/CodeBash/CodeBashDark.css
@@ -1,21 +1,26 @@
 /* Used setID for these */
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
+
 #root{
-    -fx-background-color: Black;
-    -fx-border-color: Orange;
+    -fx-background-color: #323437;
+    -fx-border-color: #e2b714;
 
 }
 
 #letter {
-    -fx-fill: Orange;
+    -fx-fill: #646669;
     -fx-font-size: 30;
+    -fx-font-family: "Roboto Mono", sans-serif;
+    -fx-font-weight: 400;
+
 }
 
 #quit {
     -fx-text-fill: Orange;
     -fx-background-color: transparent;
-    -fx-font: Arial;
     -fx-font-size: 15;
-    -fx-font-weight: bold;
+    -fx-font-family: "Roboto Mono", sans-serif;
+    -fx-font-weight: Bold;
 }
 
 
