Modifying the display

--- a/src/main/resources/CodeBash/CodeBashLight.css
+++ b/src/main/resources/CodeBash/CodeBashLight.css
@@ -1,7 +1,7 @@
 /* Used setID for these */
 #root{
-    -fx-background-color: White;
-    -fx-border-color: Orange;
+    -fx-background-color: #323437;
+    -fx-border-color: #e2b714;
     -fx-border-width: 5;
 }
 
