--- a/src/main/resources/CodeBash/ResultsLightMode.css
+++ b/src/main/resources/CodeBash/ResultsLightMode.css
@@ -1,6 +1,6 @@
 #root{
-    -fx-background-color: White;
-    -fx-border-color: Orange;
+    -fx-background-color: #323437;
+    -fx-border-color: #e2b714;
     -fx-text-fill: Orange;
 }
 
