--- a/src/main/resources/CodeBash/WelcomeLight.css
+++ b/src/main/resources/CodeBash/WelcomeLight.css
@@ -4,6 +4,10 @@
 }
 #Title{
     -fx-text-fill: Orange;
+    -fx-fill: #646669;
+    -fx-font-size: 30;
+    -fx-font-family: "Roboto Mono", sans-serif;
+    -fx-font-weight: 400;
 
 }
 
