--- a/src/main/resources/CodeBash/CodeBashLight.css
+++ b/src/main/resources/CodeBash/CodeBashLight.css
@@ -1,22 +1,28 @@
 /* Used setID for these */
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
+
 #root{
     -fx-background-color: #323437;
     -fx-border-color: #e2b714;
-    -fx-border-width: 5;
 }
 
 
 #letter {
-    -fx-fill: Orange;
-    -fx-font-size: 30;
+    -fx-text-fill: Orange;
+    -fx-background-color: transparent;
+    -fx-font-size: 15;
+    -fx-font-family: "Roboto Mono", sans-serif;
+    -fx-font-weight: Bold;
+
 }
 
 #quit {
     -fx-text-fill: Orange;
     -fx-background-color: transparent;
-    -fx-font: Arial;
-    -fx-font-size: 30;
-    -fx-font-weight: bold;}
+    -fx-font-size: 15;
+    -fx-font-family: "Roboto Mono", sans-serif;
+    -fx-font-weight: Bold;
+}
 
 /*.button {
     color: white;
