KATRINA: changes to css

--- a/src/main/resources/CodeBash/CodeBashLight.css
+++ b/src/main/resources/CodeBash/CodeBashLight.css
@@ -2,13 +2,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
 
 #root{
-    -fx-background-color: #323437;
+    -fx-background-color: #DCDCDC;
     -fx-border-color: #e2b714;
 }
 
 
 #letter {
-    -fx-text-fill: Orange;
+    -fx-text-fill: #323437;
     -fx-background-color: transparent;
     -fx-font-size: 15;
     -fx-font-family: "Roboto Mono", sans-serif;
