--- a/src/main/resources/CodeBash/CodeBashLight.css
+++ b/src/main/resources/CodeBash/CodeBashLight.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
 
 #root{
-    -fx-background-color: #DCDCDC;
+    -fx-background-color: #a9a9a9;
     -fx-border-color: #107896;
 }
 
@@ -24,13 +24,85 @@
     -fx-font-weight: Bold;
 }
 
-/*.button {
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
+.root{
+    -fx-background-color: #a9a9a9;
+    -fx-border-color: #107896;
+}
+
+#Title{
+    -fx-text-fill: #323437;
+    -fx-fill: #646669;
+    -fx-font-size: 30;
+    -fx-font-family: "Roboto Mono", sans-serif;
+    -fx-font-weight: 400;
+}
+
+#setting {
+    -fx-text-fill: #646669;
+    -fx-background-color: transparent;
+    -fx-font-family: "Roboto Mono", sans-serif;
+    -fx-font-size: 1em; /* 12 */
+}
+
+#setting:selected  {
+    -fx-text-fill: #107896;
+    -fx-background-color: transparent;
+    -fx-font-family: "Roboto Mono", sans-serif;
+    -fx-font-size: 1em; /* 12 */
+
+}
+
+#toggleBtn {
+    -fx-text-fill: #107896;
+    -fx-background-color: transparent;
+}
+#start {
+    -fx-background-color: transparent;
+    -fx-text-fill: #107896;
+    -fx-font-family: "Roboto Mono", sans-serif;
+    -fx-font-size: 18;
+    -fx-padding: 15;
+    -fx-font-weight: bold;
+}
+
+#playAgain {
+    -fx-background-color: transparent;
+    -fx-text-fill: #107896;
+}
+
+#label {
+    -fx-font-style: oblique;
+    -fx-text-fill: #323437;
+}
+
+#btnLabel {
+    -fx-text-fill: #323437;
+    -fx-font-family: "Roboto Mono", sans-serif;
+}
+
+.button{
+    -fx-transition-duration: 0.4s;
+    -fx-border-color: transparent;
+    -fx-border-width: 1, 1;
+    -fx-background-radius: 1, 1;
+    -fx-border-insets: 1 1 1 1, 0;
+    -fx-background-color: transparent;
+    -fx-font-family:"Roboto Mono", sans-serif;
+    -fx-font-size: 1em; /* 12 */
+    -fx-text-fill: #107896;
+}
+
+.button:hover {
+    -fx-border-radius: 8px;
+    -fx-border-color: transparent;
+    -fx-text-fill: #107896;
+    -fx-background-color: linear-gradient(#f2f2f2, #d6d6d6), linear-gradient(#fcfcfc 0%, #d9d9d9 20%, #d6d6d6 100%), linear-gradient(#dddddd 0%, #f6f6f6 50%);;
+    -fx-background-radius: 8px;
+    -fx-border-width: 1, 1;
+    -fx-border-insets: 1 1 1 1, 0;
+}
+
+.button:pressed {
+    -fx-background-color: transparent;
+    -fx-text-fill: #323437;
 }
