--- a/src/main/resources/CodeBash/CodeBashLight.css
+++ b/src/main/resources/CodeBash/CodeBashLight.css
@@ -34,6 +34,11 @@
     -fx-border-color: #107896;
 }
 
+#stats {
+    -fx-fill: #646669;
+    -fx-font-family: "Roboto Mono", sans-serif;
+}
+
 #Title{
     -fx-text-fill: #323437;
     -fx-fill: #646669;
@@ -61,20 +66,34 @@
 
 }
 
+#settingsBox {
+    -fx-background-color: #c6c6c6;
+}
+
 #toggleBtn {
     -fx-text-fill: #107896;
     -fx-background-color: transparent;
 }
+#instructions {
+    -fx-text-fill: #323437;
+    -fx-font-family: "Roboto Mono", sans-serif;
+    -fx-padding: 29px;
+    -fx-font-weight: Italic;
+}
+
 #start {
     -fx-background-color: transparent;
     -fx-text-fill: #107896;
     -fx-font-family: "Roboto Mono", sans-serif;
     -fx-font-size: 18;
     -fx-font-weight: bold;
+    -fx-padding: 30px;
 }
 
 #playAgain {
     -fx-background-color: transparent;
+    -fx-font-size: 15;
+    -fx-font-family: "Roboto Mono", sans-serif;
     -fx-text-fill: #107896;
 }
 
