--- a/src/main/resources/CodeBash/CodeBashLight.css
+++ b/src/main/resources/CodeBash/CodeBashLight.css
@@ -3,7 +3,7 @@
 
 #root{
     -fx-background-color: #a9a9a9;
-    -fx-border-color: #107896;
+    -fx-border-color: #006ee6;
 }
 
 
@@ -22,7 +22,7 @@
 }
 
 #quit {
-    -fx-text-fill: #107896;
+    -fx-text-fill: #006ee6;
     -fx-background-color: transparent;
     -fx-font-size: 15;
     -fx-font-family: "Roboto Mono", sans-serif;
@@ -31,7 +31,7 @@
 
 .root{
     -fx-background-color: #a9a9a9;
-    -fx-border-color: #107896;
+    -fx-border-color: #006ee6;
 }
 
 #stats {
@@ -45,6 +45,8 @@
     -fx-font-size: 30;
     -fx-font-family: "Roboto Mono", sans-serif;
     -fx-font-weight: 400;
+    -fx-padding: 15px;
+
 }
 
 #setting {
@@ -55,11 +57,11 @@
 }
 
 #setting:hover {
-    -fx-text-fill: #107896;
+    -fx-text-fill: #006ee6;
 }
 
 #setting:selected  {
-    -fx-text-fill: #107896;
+    -fx-text-fill: #006ee6;
     -fx-background-color: transparent;
     -fx-font-family: "Roboto Mono", sans-serif;
     -fx-font-size: 1em; /* 12 */
@@ -67,11 +69,11 @@
 }
 
 #settingsBox {
-    -fx-background-color: #c6c6c6;
+    -fx-background-color: #b5b4b4;
 }
 
 #toggleBtn {
-    -fx-text-fill: #107896;
+    -fx-text-fill: #006ee6;
     -fx-background-color: transparent;
 }
 #instructions {
@@ -81,9 +83,9 @@
     -fx-font-weight: Italic;
 }
 
-#start {
+#transitionButton {
     -fx-background-color: transparent;
-    -fx-text-fill: #107896;
+    -fx-text-fill: #006ee6;
     -fx-font-family: "Roboto Mono", sans-serif;
     -fx-font-size: 18;
     -fx-font-weight: bold;
@@ -94,7 +96,7 @@
     -fx-background-color: transparent;
     -fx-font-size: 15;
     -fx-font-family: "Roboto Mono", sans-serif;
-    -fx-text-fill: #107896;
+    -fx-text-fill: #006ee6;
 }
 
 #label {
@@ -126,11 +128,11 @@
     -fx-background-radius: 8px;
     -fx-border-width: 1, 1;
     -fx-border-insets: 1 1 1 1, 0;
-    -fx-text-fill: #107896;
+    -fx-text-fill: #006ee6;
 }
 
 .toggle-button:selected  {
-    -fx-text-fill: #107896;
+    -fx-text-fill: #006ee6;
     -fx-background-color: transparent;
     -fx-font-family: "Roboto Mono", sans-serif;
     -fx-font-size: 1em; /* 12 */
