--- a/src/main/resources/CodeBash/WelcomeDark.css
+++ b/src/main/resources/CodeBash/WelcomeDark.css
@@ -2,10 +2,19 @@
 .root{
     -fx-background-color: #323437;
     -fx-border-color: #e2b714;
+
 }
 #Title{
     -fx-text-fill: #646669;
     -fx-fill: #646669;
+    -fx-font-size: 30;
+    -fx-font-family: "Roboto Mono", sans-serif;
+    -fx-font-weight: 400;
+
+}
+#header{
+    -fx-text-fill: #e2b714;
+    -fx-fill: #323437;
     -fx-font-size: 30;
     -fx-font-family: "Roboto Mono", sans-serif;
     -fx-font-weight: 400;
