--- a/src/main/resources/CodeBash/CodeBashPurple.css
+++ b/src/main/resources/CodeBash/CodeBashPurple.css
@@ -1,26 +1,52 @@
+/* Used setID for these */
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
-.root{
-    -fx-background-color: #323437;
-    -fx-border-color: #e2b714;
+
+#root{
+    -fx-background-color: #864a92;
+    -fx-border-color: #967bb6;
 
 }
-#Title{
+
+#settingsBox {
+    -fx-background-color: #683a71;
+}
+
+#letter {
+    -fx-fill: #ccadd3;
+    -fx-font-size: 30;
+    -fx-font-family: "Roboto Mono", sans-serif;
+    -fx-font-weight: 400;
+
+}
+
+#stats {
     -fx-text-fill: #646669;
-    -fx-fill: #646669;
+    -fx-font-family: "Roboto Mono", sans-serif;
+}
+#quit {
+    -fx-text-fill: #967bb6;
+    -fx-background-color: transparent;
+    -fx-font-size: 15;
+    -fx-font-family: "Roboto Mono", sans-serif;
+    -fx-font-weight: Bold;
+}
+
+#Title{
+    -fx-text-fill: #683a71;
+    -fx-fill: #683a71;
     -fx-font-size: 30;
     -fx-font-family: "Roboto Mono", sans-serif;
     -fx-font-weight: 400;
+    -fx-padding: 15px;
 
 }
-#header{
-    -fx-text-fill: #e2b714;
-    -fx-fill: #323437;
-    -fx-font-size: 30;
+
+#intro {
+    -fx-text-fill: #a9a9a9;
     -fx-font-family: "Roboto Mono", sans-serif;
-    -fx-font-weight: 400;
+    -fx-padding: 15px;
 
 }
-
 #setting {
     -fx-text-fill: #646669;
     -fx-background-color: transparent;
@@ -29,26 +55,36 @@
 }
 
 #setting:hover {
-    -fx-text-fill: Orange;
+    -fx-text-fill: #967bb6;
 }
 
 #setting:selected  {
-    -fx-text-fill: Orange;
+    -fx-text-fill: #967bb6;
     -fx-background-color: transparent;
     -fx-font-family: "Roboto Mono", sans-serif;
     -fx-font-size: 1em; /* 12 */
 
 }
-#start {
-    -fx-text-fill: Orange;
+#transitionButton {
+    -fx-text-fill: #bc92c5;
     -fx-background-color: transparent;
     -fx-font-size: 18;
     -fx-font-family: "Roboto Mono", sans-serif;
     -fx-font-weight: Bold;
+    -fx-padding: 50px;
+}
+
+#countDown {
+    -fx-text-fill: #967bb6;
+    -fx-background-color: transparent;
+    -fx-font-size: 25;
+    -fx-font-family: "Roboto Mono", sans-serif;
+    -fx-font-weight: Bold;
+    -fx-padding: 30px;
 }
 
 #playAgain {
-    -fx-text-fill: Orange;
+    -fx-text-fill: #967bb6;
     -fx-background-color: transparent;
     -fx-font-size: 15;
     -fx-font-family: "Roboto Mono", sans-serif;
@@ -64,7 +100,12 @@
 #btnLabel {
     -fx-text-fill: #a9a9a9;
     -fx-font-family: "Roboto Mono", sans-serif;
+}
 
+#instructions {
+    -fx-text-fill: #a9a9a9;
+    -fx-font-family: "Roboto Mono", sans-serif;
+    -fx-padding: 29px;
 }
 .toggle-button{
     -fx-transition-duration: 0.4s;
@@ -81,7 +122,7 @@
 .toggle-button:hover {
     -fx-border-radius: 8px;
     -fx-border-color: transparent;
-    -fx-text-fill: orange;
+    -fx-text-fill: #967bb6;
     -fx-background-color: transparent;
     -fx-background-radius: 8px;
     -fx-border-width: 1, 1;
@@ -89,9 +130,10 @@
 }
 
 .toggle-button:selected  {
-    -fx-text-fill: orange;
+    -fx-text-fill: #967bb6;
     -fx-background-color: transparent;
     -fx-font-family: "Roboto Mono", sans-serif;
     -fx-font-size: 1em; /* 12 */
 
 }
+
