--- a/src/main/resources/CodeBash/CodeBashPurple.css
+++ b/src/main/resources/CodeBash/CodeBashPurple.css
@@ -13,7 +13,7 @@
 
 #letter {
     -fx-fill: #ccadd3;
-    -fx-font-size: 30;
+    -fx-font-size: 20;
     -fx-font-family: "Roboto Mono", sans-serif;
     -fx-font-weight: 400;
 
@@ -28,7 +28,6 @@
     -fx-background-color: transparent;
     -fx-font-size: 15;
     -fx-font-family: "Roboto Mono", sans-serif;
-    -fx-font-weight: Bold;
 }
 
 #Title{
@@ -79,7 +78,6 @@
     -fx-background-color: transparent;
     -fx-font-size: 25;
     -fx-font-family: "Roboto Mono", sans-serif;
-    -fx-font-weight: Bold;
     -fx-padding: 30px;
 }
 
@@ -88,7 +86,6 @@
     -fx-background-color: transparent;
     -fx-font-size: 15;
     -fx-font-family: "Roboto Mono", sans-serif;
-    -fx-font-weight: Bold;
 
 }
 
@@ -135,5 +132,18 @@
     -fx-font-family: "Roboto Mono", sans-serif;
     -fx-font-size: 1em; /* 12 */
 
+}
+
+#statsLabel {
+    -fx-text-fill: #683a71;
+    -fx-font-family: "Roboto Mono", sans-serif;
+    -fx-font-size: 20;
+
+}
+
+#statsInfo {
+    -fx-font-size: 25;
+    -fx-text-fill: #bc92c5;
+    -fx-font-family: "Roboto Mono", sans-serif;
 }
 
