--- a/src/main/resources/CodeBash/CodeBashPurple.css
+++ b/src/main/resources/CodeBash/CodeBashPurple.css
@@ -47,7 +47,7 @@
 
 }
 #setting {
-    -fx-text-fill: #646669;
+    -fx-text-fill: #6d5788;
     -fx-background-color: transparent;
     -fx-font-family: "Roboto Mono", sans-serif;
     -fx-font-size: 1em; /* 12 */
@@ -113,7 +113,7 @@
     -fx-background-color: transparent;
     -fx-font-family:"Roboto Mono", sans-serif;
     -fx-font-size: 1em; /* 12 */
-    -fx-text-fill: #646669;
+    -fx-text-fill: #6d5788;
 }
 
 .toggle-button:hover {
